--- a/Teleparty/Teleparty/Pages/Index.cshtml
+++ b/Teleparty/Teleparty/Pages/Index.cshtml
@@ -3,5 +3,49 @@
 @{
     ViewData["Title"] = "Home page";
 }
+@*test Url : https://ophimmoi.net/player.html?v=gauI7S3D_m&sub=&sub-lang=*@
+@*display video*@
+<div class="row d-flex ">
+    <div class="col-4 d-flex flex-column justify-content-between" style=" background: white !important; color: black; order:2; border-radius:10px">
+        <h3>Chat</h3>
+        <div class="chat-input">
+            <form class="send-msg" style="
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+">
+                <input class="input-msg" placeholder="type something nice" value="" style="
+    width: 80%;
+    height: 60px;
+    padding: 16px 0px;
+    font-size: 16px;
+    outline: none;
+    border: none;
+    background: none;
+    color: #0d1c2e;
+    margin-left: 10%;
+"><button type="submit" id="sendButton" style="
+    border-radius: 12px;
+    width: 50px;
+    height: 50px;
+    background: rgb(42, 139, 242);
+    outline: none;
+    border: none;
+">
+                    🕊️
+                </button>
+            </form>
+        </div>
+    </div>
+    <div class="display-video col-8">
+        <iframe src="https://ophimmoi.net/player.html?v=gauI7S3D_m&sub=&sub-lang=" style="width: 100%;height: 595px" frameborder="0" allowtransparency="true" allowfullscreen />
+    </div>
 
-<iframe style="width: 100%;height: 100%" frameborder="0" allowtransparency="true" src="/play/?url=https://2phimmoi.net/player.html?v=Qjkt2t-fF&sub=&sub-lang=" allowfullscreen></iframe>
+</div>
+
+
+
+
