logic play film

--- a/Teleparty/Teleparty/Pages/Index.cshtml
+++ b/Teleparty/Teleparty/Pages/Index.cshtml
@@ -14,12 +14,20 @@
     {
         <div class="card my-2 mx-2" style="width: 18rem;">
             <img class="card-img-top" src="@($"https://www.themoviedb.org/t/p/w440_and_h660_face{@item.poster_path}")" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column justify-content-between">
                 <strong>@item.title</strong>
+                <a type="button" class="btn btn-danger my-2" asp-page="./Party" asp-route-name="@item.original_title">Watch</a>
             </div>
         </div>
     }
 </div>
+
+<style>
+    .card {
+        cursor: pointer;
+    }
+</style>
+
 
 
 
