--- a/Teleparty/Teleparty/Pages/Party.cshtml
+++ b/Teleparty/Teleparty/Pages/Party.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
 @model Teleparty.Pages.PartyModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Party page";
 }
 @*test Url : https://ophimmoi.net/player.html?v=gauI7S3D_m&sub=&sub-lang=*@
 @*display video*@
+
 <div class="row d-flex ">
     <div class="col-4 d-flex flex-column justify-content-between" style=" background: white !important; color: black; order:2; border-radius:10px">
         <h3>Chat</h3>
@@ -41,7 +42,7 @@
         </div>
     </div>
     <div class="display-video col-8">
-        <iframe src="https://ophimmoi.net/player.html?v=gauI7S3D_m&sub=&sub-lang=" style="width: 100%;height: 595px" frameborder="0" allowtransparency="true" allowfullscreen />
+        <iframe src="@Model.Source" style="width: 100%;height: 595px" frameborder="0" allowtransparency="true" allowfullscreen />
     </div>
 
 </div>
