--- a/Teleparty/Teleparty/Pages/Party.cshtml
+++ b/Teleparty/Teleparty/Pages/Party.cshtml
@@ -46,3 +46,5 @@
     </div>
 
 </div>
+<script src="~/js/signalr/dist/browser/signalr.js" asp-append-version="true"></script>
+<script src="~/js/chat.js"></script> 
